--- a/html_files/customerview.html
+++ b/html_files/customerview.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="websitestyle1.css">
+        <link rel="stylesheet" href="../css_files/websitestyle1.css">
         <title>CSCI 466 Project - Karaoke Website: Customer Page</title>
     </head>
 
