--- a/html_files/startpage.html
+++ b/html_files/startpage.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>CS NIU Karaoke Website</h1>
-        <p><b>Created by Edgar, Mohammed, and Yonas.</b></p>
+        
 
         <img src="http://3.bp.blogspot.com/-YNneJc7QSuY/TzlvuORBx2I/AAAAAAAAATY/7frEBUJ9bjg/s1600/karaoke.jpg"/>
 
@@ -17,11 +17,12 @@
             select the "DJ Interface" button to view the DJ tools.       
         </p>
 
-        <a href="customerview.html">
+        <a href="customerview.php">
             <input type="button" value="Sing a Song" onclick="alert('Webpage not developed yet!')">
         </a>
-        <a href="djview.html">
+        <a href="djview.php">
             <input type="button" value="DJ Interface" onclick="alert('Webpage not developed yet!')">
         </a>
+        <p><b>Created by Edgar, Mohammed, and Yonas.</b></p>
     </body>
 </html>
