Added auto increment in SQL, and other html/php work (for real this time smh)

--- a/html_files/startpage.html
+++ b/html_files/startpage.html
@@ -17,11 +17,11 @@
             select the "DJ Interface" button to view the DJ tools.       
         </p>
 
-        <a href="customerview.php">
-            <input type="button" value="Sing a Song" onclick="alert('Webpage not developed yet!')">
+        <a href="customer_signin.php">
+            <input type="button" value="Sing a Song">
         </a>
         <a href="djview.php">
-            <input type="button" value="DJ Interface" onclick="alert('Webpage not developed yet!')">
+            <input type="button" value="DJ Interface">
         </a>
         <p><b>Created by Edgar, Mohammed, and Yonas.</b></p>
     </body>
