Changed the main page a little

--- a/html_files/startpage.html
+++ b/html_files/startpage.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
         <link rel="stylesheet" href="../css_files/websitestyle1.css">
-        <title>CSCI 466 Project - Karaoke Website: Main Page</title>
+
+        <title>CSCI 466 Project - Karaoke Website</title>
     </head>
 
     <body>
+        <div class="w3-bar w3-black w3-card w3-large">
+            <a href="customer_signin.php" class="w3-bar-item w3-button">Sing a Song</a>
+            <a href="djview.php" class="w3-bar-item w3-button">DJ Interface</a>
+        </div> 
         <h1>CS NIU Karaoke Website</h1>
         
 
@@ -17,12 +23,8 @@
             select the "DJ Interface" button to view the DJ tools.       
         </p>
 
-        <a href="customer_signin.php">
-            <input type="button" value="Sing a Song">
-        </a>
-        <a href="djview.php">
-            <input type="button" value="DJ Interface">
-        </a>
-        <p><b>Created by Edgar, Mohammed, and Yonas.</b></p>
+        <div class="w3-container w3-black">
+            <p>&copy; Edgar, Mohamed, and Yonas</p>
+          </div>
     </body>
 </html>
