--- a/html_files/startpage.html
+++ b/html_files/startpage.html
@@ -12,10 +12,11 @@
             <a href="customer_signin.php" class="w3-bar-item w3-button">Sing a Song</a>
             <a href="djview.php" class="w3-bar-item w3-button">DJ Interface</a>
         </div> 
-        <h1>CS NIU Karaoke Website</h1>
+        <h1>Huskies death rattle</h1>
         
-
-        <img src="http://3.bp.blogspot.com/-YNneJc7QSuY/TzlvuORBx2I/AAAAAAAAATY/7frEBUJ9bjg/s1600/karaoke.jpg"/>
+        <!--  http://3.bp.blogspot.com/-YNneJc7QSuY/TzlvuORBx2I/AAAAAAAAATY/7frEBUJ9bjg/s1600/karaoke.jpg -->
+        <div class="w3-card-4" id="photo"><img src="https://i.ytimg.com/vi/HTglOSNJRoA/maxresdefault.jpg"/></div>
+        
 
         <p>
             Welcome to the online (NIU?) Karaoke service. Please select the "Sing a Song" button
@@ -24,7 +25,7 @@
         </p>
 
         <div class="w3-container w3-black">
-            <p>&copy; Edgar, Mohamed, and Yonas</p>
+            <p>&copy;2023 Edgar, Mohamed, and Yonas</p>
           </div>
     </body>
 </html>
