--- a/html_files/startpage.html
+++ b/html_files/startpage.html
@@ -25,7 +25,7 @@
         </p>
 
         <div class="w3-container w3-black">
-            <p>&copy;2023 Edgar, Mohamed, and Yonas</p>
+            <p>&copy;2023 Edgar, Yonas, and Mohamed</p>
           </div>
     </body>
 </html>
