--- a/html_files/startpage.html
+++ b/html_files/startpage.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
+        <meta charset="utf-8">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="../css_files/websitestyle1.css">
 
         <title>CSCI 466 Project - Karaoke Website</title>
     </head>
 
     <body>
-        <div class="w3-bar w3-black w3-card w3-large">
-            <a href="customer_signin.php" class="w3-bar-item w3-button">Sing a Song</a>
-            <a href="djview.php" class="w3-bar-item w3-button">DJ Interface</a>
-        </div> 
-        <h1>Huskies death rattle</h1>
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark py-3">
+            <div class="container-fluid">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" href="customer_signin.php">Sing a Song</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="djview.php">DJ Interface</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="customer_signin.php">Login Page</a>
+                </li>
+              </ul>
+            </div>
+        </nav> 
         
         <!--  http://3.bp.blogspot.com/-YNneJc7QSuY/TzlvuORBx2I/AAAAAAAAATY/7frEBUJ9bjg/s1600/karaoke.jpg -->
         <div class="w3-card-4" id="photo"><img src="https://i.ytimg.com/vi/HTglOSNJRoA/maxresdefault.jpg"/></div>
@@ -24,8 +35,15 @@
             select the "DJ Interface" button to view the DJ tools.       
         </p>
 
-        <div class="w3-container w3-black">
-            <p>&copy;2023 Edgar, Yonas, and Mohamed</p>
-          </div>
+        <footer class="text-center text-lg-start bg-dark">
+            <div class="container d-flex justify-content-center py-5">
+            </div>
+        
+            <!-- Copyright -->
+            <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+              © 2023 Created by: Edgar, Yonas, Mohamed
+            </div>
+            <!-- Copyright -->
+          </footer>
     </body>
 </html>
