--- a/html_files/startpage.html
+++ b/html_files/startpage.html
@@ -26,7 +26,7 @@
         </nav> 
         
         <!--  http://3.bp.blogspot.com/-YNneJc7QSuY/TzlvuORBx2I/AAAAAAAAATY/7frEBUJ9bjg/s1600/karaoke.jpg -->
-        <div class="w3-card-4" id="photo"><img src="https://i.ytimg.com/vi/HTglOSNJRoA/maxresdefault.jpg"/></div>
+        <div class="w3-card-4" id="photo"><img src="https://img1.wsimg.com/isteam/ip/7cfa76f8-4a5b-497c-878f-e2d104424cc9/5220c1ad-6bc4-494c-bc02-6e0d40d238fa.jpg/:/"/></div>
         
 
         <p>
