--- a/html_files/startpage.html
+++ b/html_files/startpage.html
@@ -9,17 +9,17 @@
     </head>
 
     <body style="background-color: indigo;">
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark py-3">
+        <nav class="navbar sticky-top navbar-expand-sm bg-dark navbar-dark py-3">
             <div class="container-fluid">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" href="customer_signin.php">Sing a Song</a>
+                  <a class="nav-link active" href="startpage.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="customer_signin.php">Sing a Song</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="djview.php">DJ Interface</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="customer_signin.php">Login Page</a>
                 </li>
               </ul>
             </div>
